--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,11 @@
 body {
 	margin: 0;
 }
+
+.board {
+	width: 100vw;
+	height: 100vh;
+	display: grid;
+	justify-content: center;
+	align-content: center;
+}
