--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,9 @@ body {
 	justify-content: center;
 	align-content: center;
 }
+
+.cell {
+	width: 100px;
+	height: 100px;
+	background-color: black;
+}
