--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 	display: grid;
 	justify-content: center;
 	align-content: center;
+	grid-template-columns: repeat(3, auto);
 }
 
 .cell {
