--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 }
 
+:root {
+	--cell-size: 100px;
+}
+
 body {
 	margin: 0;
 }
@@ -16,8 +20,8 @@ body {
 }
 
 .cell {
-	width: 100px;
-	height: 100px;
+	width: var(--cell-size);
+	height: var(--cell-size);
 	background-color: black;
 	border: 1px solid white;
 }
