--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 :root {
 	--cell-size: 100px;
-	--mark-size: cal(var(--cell-size) * .9);
+	--mark-size: calc(var(--cell-size) * .9);
 }
 
 body {
@@ -46,4 +46,11 @@ body {
 .cell:nth-child(8),
 .cell:nth-child(7) {
 	border-bottom: none;
+}
+
+.cell.x::before,
+.cell.x::after {
+	content: '';
+	width: calc(var(--mark-size) * .15);
+	height: var(--mark-size);
 }
