--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,12 @@ body {
 
 	transform: rotate(-45deg);
 }
+
+.cell.circle::before,
+.cell.circle::after {
+	content: '';
+	position: absolute;
+	width: var(--mark-size);
+	height: var(--mark-size);
+	background-color: black;
+}
