--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ body {
 	background-color: black;
 }
 
+.cell.circle::before,
+.cell.circle::after {
+	background-color: black;
+}
 
 .board.x .cell:not(.x):not(.circle):hover::before,
 .board.x .cell:not(.x):not(.circle):hover::after {
