--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,6 @@ body {
 	background-color: black;
 }
 
-.cell.circle::before,
-.cell.circle::after {
-	background-color: black;
-}
 
 .board.x .cell:not(.x):not(.circle):hover::before,
 .board.x .cell:not(.x):not(.circle):hover::after {
@@ -95,21 +91,39 @@ body {
 	transform: rotate(-45deg);
 }
 
-.cell.circle::before,
+.cell.circle::before {
+	background-color: black;
+}
+
 .cell.circle::after {
+	background-color: white;
+}
+
+.board.circle .cell:not(.x):not(.circle):hover::before {
+	background-color: lightgrey;
+}
+
+.board.circle .cell:not(.x):not(.circle):hover::after {
+	background-color: white;
+}
+
+.cell.circle::before,
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after {
 	content: '';
 	position: absolute;
 	border-radius: 50%;
 }
 
-.cell.circle::before {
+.cell.circle::before,
+.board.circle .cell:not(.x):not(.circle):hover::before {
 	width: var(--mark-size);
 	height: var(--mark-size);
-	background-color: black;
 }
 
-.cell.circle::after {
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::after {
 	width: calc(var(--mark-size) * .7);
 	height: calc(var(--mark-size) * .7);
-	background-color: white;
 }
