--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,15 @@ body {
 	width: calc(var(--mark-size) * .7);
 	height: calc(var(--mark-size) * .7);
 }
+
+.winning-message {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, .9);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
