--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,6 @@ body {
 	right: 0;
 	bottom: 0;
 	background-color: rgba(0, 0, 0, .9);
-	display: flex;
 	justify-content: center;
 	align-items: center;
 	color: white;
@@ -157,4 +156,8 @@ body {
 	background-color: rgba(0, 0, 0, .9);
 	border-color: white;
 	color: white;
+}
+
+.winning-message.show {
+	display: flex;
 }
